--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ MCGS
 MCGS_test
 MCGS_test.dSYM/Contents/Info.plist
 MCGS_test.dSYM/Contents/Resources/Relocations/aarch64/MCGS_test.yml
+.DS_Store
