add editor temp files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ MCGS_test
 MCGS_test.dSYM/Contents/Info.plist
 MCGS_test.dSYM/Contents/Resources/Relocations/aarch64/MCGS_test.yml
 .DS_Store
+
+# Editor temp files  (clangd cache, bear output)
+.cache
+compile_commands.json
