index save/load prototyping

--- a/db_prototyping/makefile
+++ b/db_prototyping/makefile
@@ -1,8 +1,11 @@
-.PHONY: run
+.PHONY: run, clean
 
 
 run:
 	-@rm test
-	g++ serialization_test.cpp -o test --std=c++17 -O3 -DNDEBUG
-	#g++ serialization_test.cpp -o test --std=c++17 -O3
+	#g++ serialization_test.cpp -o test --std=c++17 -O3 -DNDEBUG
+	g++ serialization_test.cpp -o test --std=c++17 -O3
 	./test
+
+clean:
+	-rm test data.bin
