--- a/db_prototyping/makefile
+++ b/db_prototyping/makefile
@@ -1,10 +1,12 @@
 .PHONY: run, clean
 
 
+FLAGS := -I.
+
 run:
-	-@rm test
-	#g++ serialization_test.cpp -o test --std=c++17 -O3 -DNDEBUG
-	g++ serialization_test.cpp -o test --std=c++17 -O3
+	-rm test
+	g++ serialization_test.cpp -o test --std=c++17 -O3 -DNDEBUG $(FLAGS)
+	#g++ serialization_test.cpp -o test --std=c++17 -O3
 	./test
 
 clean:
