make zobrist_index lookups faster

--- a/db_prototyping/makefile
+++ b/db_prototyping/makefile
@@ -6,7 +6,7 @@ FLAGS := -I.
 run:
 	-rm test
 	g++ serialization_test.cpp -o test --std=c++17 -O3 -DNDEBUG $(FLAGS)
-	#g++ serialization_test.cpp -o test --std=c++17 -O3
+	#g++ serialization_test.cpp -o test --std=c++17 -O3 -g
 	./test
 
 clean:
